force-app/main/default/objects/Move_in_Specials__c/Move_in_Specials__c.object-meta.xml
<CustomObject>
    <description>Tracks promotional move-in specials for apartment locations, including rent discounts and duration</description>
    <label>Move in Specials</label>
    <nameField>
        <displayFormat>MIS-{0000}</displayFormat>
        <label>Special Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Move in Specials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>