force-app/main/default/objects/Move_in_Specials__c/fields/Apt_Location__c.field-meta.xml
<CustomField>
    <fullName>Apt_Location__c</fullName>
    <label>Apt Location</label>
    <referenceTo>Apt_Location__c</referenceTo>
    <relationshipLabel>Move in Specials</relationshipLabel>
    <relationshipName>Move_in_Specials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>