force-app/main/default/objects/Move_in_Specials__c/fields/Number_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bedrooms__c</fullName>
    <label>Number of Bedrooms</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>