force-app/main/default/objects/Move_in_Specials__c/fields/Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months__c</fullName>
    <label>Number of Months</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>