force-app/main/default/objects/Move_in_Specials__c/fields/Rent_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Discount__c</fullName>
    <label>Rent Discount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>