force-app/main/default/objects/Move_in_Specials__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apt_Location__c</columns>
    <columns>Rent_Discount__c</columns>
    <columns>Number_of_Bedrooms__c</columns>
    <columns>Year__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>